Fix for missing background of the top menu.

--- a/spistresci/static/css/style.css
+++ b/spistresci/static/css/style.css
@@ -32,7 +32,7 @@ a{
 /*   width:960px; */
 }
 .menu{
-  background:url(img/menu_bg.png) repeat-x;
+  background:url(../img/menu_bg.png) repeat-x;
   width:100%;
   height:57px;
   list-style:none;
